--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -45,11 +45,11 @@
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "73PqantjeeUN",
-        "outputId": "b047a004-f67d-4b7a-a221-c485f0d1ea8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "73PqantjeeUN",
+        "outputId": "b047a004-f67d-4b7a-a221-c485f0d1ea8b"
       },
       "outputs": [
         {
@@ -87,12 +87,12 @@
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "LTWZkXwceeUO",
-        "outputId": "9cf6ac1c-238b-4730-c8f3-a4d3ae22c8ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "LTWZkXwceeUO",
+        "outputId": "9cf6ac1c-238b-4730-c8f3-a4d3ae22c8ca"
       },
       "outputs": [
         {
@@ -353,12 +353,12 @@
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "D0XkjsH7eeUO",
-        "outputId": "ab672a63-e127-4e3f-d3d7-ee6d806af74c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "D0XkjsH7eeUO",
+        "outputId": "ab672a63-e127-4e3f-d3d7-ee6d806af74c"
       },
       "outputs": [
         {
@@ -426,7 +426,8 @@
         "# Q3.2: Types & cleaning\n",
         "df[\"time\"] = pd.to_datetime(df[\"Month\"], format=\"mixed\", errors=\"coerce\")\n",
         "\n",
-        "for c in df.columns:\n",
+        "for c in df.columns:   # Convert Month from object to datetime and coerce rig counts to nume\n",
+        "# Ensures time series operations work correctly and catches any non-numeric entries\n",
         "    if c not in [\"Month\", \"time\"]:\n",
         "        df[c] = pd.to_numeric(df[c], errors=\"coerce\")\n",
         "\n",
@@ -469,6 +470,8 @@
         "    var_name=\"Rig Type\",\n",
         "    value_name=\"Number of Rigs\"\n",
         ")\n",
+        "# Compare onshore vs offshore rig counts over time\n",
+        "# Onshore rigs dominate and fluctuate more, offshore rigs are fewer and more stable\n",
         "\n",
         "plt.figure(figsize=(10,5))\n",
         "for rig_type, sub in df_melt.groupby(\"Rig Type\"):\n",
@@ -500,7 +503,8 @@
       "version": "3.10.18"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     }
   },
   "nbformat": 4,
